# KAnime

./: CMakeLists.txt  README.md
src/: main.cpp  main.hpp
src/comm/: CMakeLists.txt  comm.cpp  comm.hpp  main.cpp
src/json/: jFunc.cpp  jFunc.hpp
src/mainWindow/: mainWindow.cpp  mainWindow.hpp
src/searchDialog/: searchDialog.cpp  searchDialog.hpp
